--- a/src/main/resources/hazelcast.yaml
+++ b/src/main/resources/hazelcast.yaml
@@ -2,6 +2,7 @@ hazelcast:
   cluster-name: demo
   management-center:
     enabled: true
+    url: http://hazelcast-mgmt:8080/hazelcast-mancenter
   network:
     join:
       multicast:
