--- a/pom.xml
+++ b/pom.xml
@@ -55,16 +55,16 @@
             <artifactId>spring-data-hazelcast</artifactId>
             <version>2.2.5</version>
         </dependency>
-        <dependency>
-            <groupId>net.javacrumbs.shedlock</groupId>
-            <artifactId>shedlock-spring</artifactId>
-            <version>4.12.0</version>
-        </dependency>
-        <dependency>
-            <groupId>net.javacrumbs.shedlock</groupId>
-            <artifactId>shedlock-provider-hazelcast</artifactId>
-            <version>4.12.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>net.javacrumbs.shedlock</groupId>-->
+<!--            <artifactId>shedlock-spring</artifactId>-->
+<!--            <version>4.12.0</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>net.javacrumbs.shedlock</groupId>-->
+<!--            <artifactId>shedlock-provider-hazelcast</artifactId>-->
+<!--            <version>4.12.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
