--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-all</artifactId>
-            <version>3.12.7</version>
+            <version>4.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -50,10 +50,16 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.hazelcast</groupId>-->
+<!--            <artifactId>spring-data-hazelcast</artifactId>-->
+<!--            <version>2.2.5</version>-->
+<!--        </dependency>-->
+
         <dependency>
-            <groupId>com.hazelcast</groupId>
-            <artifactId>spring-data-hazelcast</artifactId>
-            <version>2.2.5</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-keyvalue</artifactId>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>net.javacrumbs.shedlock</groupId>-->
