--- a/src/main/resources/hazelcast.yaml
+++ b/src/main/resources/hazelcast.yaml
@@ -1,18 +1,18 @@
 hazelcast:
-  cluster-name: demo
+  cluster-name: dev
 
   cp-subsystem:
     cp-member-count: 3
 
   management-center:
     enabled: true
-    url: http://hazelcast-mgmt:8080/hazelcast-mancenter
+#    url: http://hazelcast-mgmt:8080/hazelcast-mancenter
 
   network:
     join:
       multicast:
         enabled: true
-  map:
-    default:
-      time-to-live-seconds: 60
+#  map:
+#    default:
+#      time-to-live-seconds: 60
 
